--- a/bloom-and-vine/src/Components/gallery-carousel/Components/gallerySlider/gallerySlider.css
+++ b/bloom-and-vine/src/Components/gallery-carousel/Components/gallerySlider/gallerySlider.css
@@ -66,4 +66,7 @@
     .gallery-slider {
         gap: 4vw;
     }
+    .button-image {
+        height: 50px;
+    }
 }
